  * Clean up CPPFLAGS and CFLAGS, including making all of CFLAGS a
    superset of CPPFLAGS.  Also make sure to include -I switches with
    absolute paths so the apache headers are useful.
  * Warn when not starting HTTPD due to missing apache binary.  
    Closes: #384128
  * Provide sample disk and memory cache configurations.  Closes: #278564
  * Provide dir.conf.   Closes: #392356
  * Add alternate dependency from apache to apache2-mpm-event 

  [ Adam Conrad ]
  * Update our php4 and php5 conflicts, to reflect the reality that each
    were uploaded and built again while apache2.2 was in the new queue.
    Closes: #392189
  * Migrate kill symlinks from K91 to K09 (closes: #376503)
  * Make apache2 depend on the current version of the MPMs, as it used
    to in the 2.0.x series (and make it binNMU-safe) (closes: #394658)
  * Make sure that the RedirectMatch in sites-available/default continues
    to be commented out for Ubuntu, while having it uncommented for Debian.

  [ Thom May ]
  * Fix permissions on suexec (Closes: #391918)
  * This is Debian, not Ubuntu (Closes: #393277)

 -- Adam Conrad <adconrad@0c3.net>  Sat,  7 Oct 2006 17:57:04 +1000

apache2 (2.2.3-2) unstable; urgency=low

  * Make sure to ship /var/log/apache2 in the apache2.2-common package.
    Closes: #390786
  * Install suexec.8 as suexec2.8.  Closes: #390774
  * Make sure that we never ship .svn directories in any binary packages.
    Closes: #390785
  * Not only chmod -x /usr/sbin/apache2 in apache2.2-common.preinst, chmod
    +x it in same's postinst too.  Closes: #390794
  * We now ship htcacheclean in apache2-utils.  Closes: #376680
  * Try to stop old apaches in preinst of the mpms.  Closes:  #390893
  * Make apache2-mpm-{worker,prefork} conflict with apache2-mpm-event and
    apache2-common.
  * rm -f /var/lib/dpkg/info/apache2-common.postrm.  So apache2-common can
    be purged. Yes, we're on crack.  Closes: #390823
  * Make apache2-utils's Replaces on apache2-common be unversioned.